2008-06-11  Ross Burton  <ross@burtonini.com>

	* programs/gvfs-mkdir.c:
	Add -p to create parents (using
	g_file_make_directory_with_parents, just landed in glib).  Patch
	from A Walton (#511367)

2008-06-11  A. Walton  <awalton@gnome.org>

	* daemon/gvfsbackendtrash.c (escape_pathname), (unescape_pathname):
	Use hex escapes in the trash backend. 
	Patch by Andreas Henriksson.
	Fixes bug #523139.

2008-06-11  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendftp.c:
	Fix recursive copy of directories (#522933)
	Introduce new error 550 handling framework

2008-06-10  Cosimo Cecchi  <cosimoc@gnome.org>

	* daemon/gvfsbackendarchive.c: (gvfs_archive_pop_job):
	* daemon/gvfsbackenddav.c: (stat_location), (write_ready),
	(close_write_ready), (do_make_directory), (do_delete):
	* daemon/gvfsbackendftp.c:
	(ftp_connection_set_error_from_response):
	* daemon/gvfsbackendhttp.c: (g_vfs_job_failed_from_http_status),
	(open_for_read_ready), (read_ready), (try_seek_on_read),
	(close_read_ready):
	* daemon/gvfsbackendobexftp.c: (_query_file_info_helper),
	(error_occurred_cb), (do_delete):
	Fix build warnings with GCC 4.3.0 (#537588).
	* daemon/gvfsjob.c: (g_vfs_job_failed), (g_vfs_job_failed_literal):
	* daemon/gvfsjob.h:
	Add g_vfs_job_failed_literal ().

2008-06-09  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp-fl-parser.c (fl_parser_start_node_cb): 
	Patch from Tomáš Bžatek <tbzatek@redhat.com> to fix the fugly icons
	when the mime-type of a file isn't known to us. See:
	https://bugzilla.redhat.com/show_bug.cgi?id=450453

2008-06-04  Bastien Nocera  <hadess@hadess.net>

	* hal/ghalvolumemonitor.c (update_cameras): Don't add
	devices that are both audio players and cameras twice,
	as it causes 1) error messages when plugging in (it tries to
	mount the device another time) 2) weird behaviour in
	nautilus' computer:/ (See #536601)

2008-06-03  Hans Petter Jansson  <hpj@novell.com>

	* configure.ac: Post-release bump to 0.99.2.

=== gvfs 0.99.1 ===
