@@ -46,7 +46,7 @@ struct _GDaemonFileEnumeratorClass
 
 GType g_daemon_file_enumerator_get_type (void) G_GNUC_CONST;
 
-GDaemonFileEnumerator *g_daemon_file_enumerator_new                 (void);
+GDaemonFileEnumerator *g_daemon_file_enumerator_new                 (GFile *file);
 char  *                g_daemon_file_enumerator_get_object_path     (GDaemonFileEnumerator *enumerator);
 void                   g_daemon_file_enumerator_set_sync_connection (GDaemonFileEnumerator *enumerator,
 								     DBusConnection        *connection);
